@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
     <configSections>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net-net-1.0"/>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="mRemoteNG.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
@@ -10,7 +10,7 @@
         </sectionGroup>
     </configSections>
     <log4net>
-			<logger name="mRemoteNG.Log">
+			<logger name="Logger">
 				<level value="INFO"/>
 			</logger>
 			
