@@ -3,6 +3,7 @@
   Fixed issue MR-121 - Config pane not sorting properties correctly when switching between alphabetical and categorized view
   Fixed issue MR-130 - Issues duplicating folders
   Fixed issue MR-158 - Password field not accepting Pipe
+  Fixed issue MR-330 - Portable version saves log to user's profile folder
   Fixed issue MR-333 - Unnecessary prompt for 'close all open connections?'
 
 1.70 (2013-02-22):
